--- a/第七个/1/index.html
+++ b/第七个/1/index.html
@@ -23,7 +23,7 @@
 		<script type="text/javascript" src="./jscss/time.js"></script>
 		<!-- 设置文字跟随鼠标 -->
 		<script type="text/javascript" src="./jscss/makesnake.js"></script></head><body>
-		<!-- thanks for watching! -->
+		<!-- "I love Xing er! -->
 		<span id="span0" class="spanstyle">T</span><span id="span1" class="spanstyle">h</span>
 		<span id="span2" class="spanstyle">a</span><span id="span3" class="spanstyle">n</span>
 		<span id="span4" class="spanstyle">k</span><span id="span5" class="spanstyle">s</span><span id="span6" class="spanstyle">
